<resources>
    <string name="app_name">Peduli Sekolah</string>
    <string name="tag_line">Dana Sumbangan Pendidikan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="powered_by">Powered by</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="dont_have_account">Don`t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="nis">NIS</string>
    <string name="username">Username</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="agree">I agree to the Terms &amp; Conditions and Privacy Policy</string>
</resources>