<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.RegisterActivity">

    <View
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        android:background="@drawable/header_layer_register"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:includeFontPadding="false"
            android:src="@drawable/ic_peskologo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_name"
            android:textColor="@color/secondary_black"
            android:textSize="19sp" />
    </LinearLayout>

    <View
        android:id="@+id/viewSupport"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        app:layout_constraintTop_toBottomOf="@id/viewSupport"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputNis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/nis"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textWelcome"
            tools:ignore="Autofill"/>

        <View
            android:id="@+id/viewDividerForNis"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputNis"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_nisn"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputNis"
            app:layout_constraintStart_toStartOf="@id/inputNis"/>

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerForNis"
            tools:ignore="Autofill"/>

        <View
            android:id="@+id/viewDividerForUsername"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputUsername"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_person"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputUsername"
            app:layout_constraintStart_toStartOf="@id/inputUsername"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerForUsername"
            tools:ignore="Autofill"/>

        <View
            android:id="@+id/viewDividerForEmail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputEmail"
            app:layout_constraintStart_toStartOf="@id/inputEmail"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForEmail"/>

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_lock"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            app:layout_constraintStart_toStartOf="@id/inputPassword"/>

        <EditText
            android:id="@+id/inputKonfirmasiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:background="@null"
            android:hint="@string/konfirmasi_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForPassword"/>

        <View
            android:id="@+id/viewDividerForKonfrimasiPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputKonfirmasiPassword"/>

        <LinearLayout
            android:id="@+id/agreeButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForKonfrimasiPassword">
            <CheckBox
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"/>
            <TextView
                android:id="@+id/rememberText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/agree"
                android:textSize="13sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sync_lock"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputKonfirmasiPassword"
            app:layout_constraintStart_toStartOf="@id/inputKonfirmasiPassword"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:enabled="false"
            android:background="@drawable/disabled_primary_button_background"
            app:layout_constraintTop_toBottomOf="@id/agreeButton"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonRegister"
            app:layout_constraintVertical_bias="-0.9"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/purple_500"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginEnd="10dp"
                android:textSize="13sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>