<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_layer"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:text="@string/tag_line"
            android:textSize="20sp"/>
    </LinearLayout>

    <View
        android:id="@+id/viewSupport"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_background"
        app:layout_constraintTop_toBottomOf="@id/viewSupport"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textWelcome"
            tools:ignore="Autofill"/>

        <View
            android:id="@+id/viewDividerForEmail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputEmail"
            app:layout_constraintStart_toStartOf="@id/inputEmail"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForEmail"/>

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/secondary_black"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"/>

        <LinearLayout
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForPassword">
            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                android:checked="true"/>
            <TextView
                android:id="@+id/rememberText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:text="@string/remember_me"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textSize="13sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/lockIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_lock"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            app:layout_constraintStart_toStartOf="@id/inputPassword"/>

        <ImageView
            android:id="@+id/unlockIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_unlock"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            app:layout_constraintStart_toStartOf="@id/inputPassword"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:button="@null"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_eye"
            app:tint="@color/secondary_black"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            app:layout_constraintEnd_toEndOf="@id/inputPassword"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:background="@drawable/enabled_primary_button_background"
            app:layout_constraintTop_toBottomOf="@id/forgetPassword"/>

        <LinearLayout
            android:id="@+id/viewDividerForOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <View
                android:layout_width="145dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/secondary_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/purple_500"/>
            <View
                android:layout_width="145dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/secondary_black"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="Login with Google"
            android:textColor="@color/purple_500"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_google"
            android:background="@drawable/secondary_button_background"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForOr"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLoginGoogle"
            app:layout_constraintVertical_bias="-0.9"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/purple_500"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginEnd="10dp"
                android:textSize="13sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>